--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,8 +38,13 @@
         <div class="row">
             <div class="col-sm-3 col-md-2 sidebar">
                 <ul class="nav nav-sidebar">
-                    <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Projetos</a></li>
+                    {% set navigation_bar = [['app_homepage', 'Overview'], ['app_projects', 'Projetos']] %}
+                    {% set active_page = active_page|default('app_homepage') %}
+                    {% for nav in navigation_bar %}
+                        <li{% if active_page == nav[0] %} class="active"{%endif%}>
+                            <a href="{{ path(nav[0]) }}">{{ nav[1] }}{% if active_page == nav[0] %}<span class="sr-only">(current)</span>{% endif %}</a>
+                        </li>
+                    {% endfor %}
                 </ul>
             </div>
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
